Tag branches/1.3 r3320 as tags/1.3.18